# sbi-digital-adoption-sentinel

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  customer_state_manifest.py  demo_data_loader.py  explanation_layer.py  journey_classifier.py  main.py  models.py  readiness_decision_engine.py  receipt_generator.py  safe_next_action_router.py  sop_rule_engine.py
data/: demo_cases.json  mock_aa_consents.json  mock_customers.json  mock_nominee_cases.json  mock_transactions.json
docs/: API_EXAMPLES.md  ARCHITECTURE.md  CLAIM_BOUNDARY.md  DEMO_SCRIPT.md  DEMO_WALKTHROUGH.md  HACKATHON_SUBMISSION_TEXT.md  PRODUCT_LOCK.md
docs/screenshots/: README.md
policy_rules/: account_aggregation_rules.json  failed_transaction_rules.json  nominee_update_rules.json
schemas/: digital_action_envelope.v0.1.schema.json  digital_action_receipt.v0.1.schema.json
scripts/: __init__.py  smoke_demo.py
tests/: test_account_aggregation_consent.py  test_api.py  test_failed_transaction_recovery.py  test_journey_classifier.py  test_nominee_update_readiness.py  test_receipt_generator.py  test_smoke_demo.py
