[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sbi-digital-adoption-sentinel"
version = "0.1.0"
description = "Governed digital action-readiness engine for SBI digital adoption journeys"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
